--- a/srcs/ftps/files/vsftpd.conf
+++ b/srcs/ftps/files/vsftpd.conf
@@ -1,8 +1,9 @@
 anonymous_enable=NO
 dirmessage_enable=YES
 xferlog_enable=YES
-connect_from_port_20=YES
+connect_from_port_20=NO
 listen=YES
+listen_ipv6=NO
 local_enable=YES
 allow_writeable_chroot=YES
 write_enable=YES
@@ -17,9 +18,10 @@ chroot_local_user=YES
 local_umask=022
 passwd_chroot_enable=yes
 seccomp_sandbox=NO
+pasv_address={EIP}
 pasv_enable=Yes
-pasv_max_port=10100
-pasv_min_port=10000
+pasv_min_port=7000
+pasv_max_port=7005
 
 ssl_tlsv1=YES
 ssl_sslv2=YES
