--- a/srcs/nginx/files/nginx.conf
+++ b/srcs/nginx/files/nginx.conf
@@ -1,7 +1,7 @@
 server {
 	listen 80 default_server;
 	listen [::]:80 default_server;
-	return 301 https://$server_name$request_uri;
+	return 301 https://$host$request_uri;
 }
 
 server {
@@ -9,12 +9,13 @@ server {
 
 	listen 443 ssl;
 	listen [::]:443 ssl;
-	
+
 	server_name ft_services localhost;
 
 	ssl_certificate /etc/ssl/certs/nginx.pem;
 	ssl_certificate_key /etc/ssl/certs/nginx.pem;
 	ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers         HIGH:!aNULL:!MD5;
+	error_page  497 https://$host$request_uri;
     root /var/www/;
 }
